# gmx-python-ng

./: .gitignore  README.md  config.yaml  pyproject.toml
example_scripts/: anvil_set.py  create_decrease_order.py  create_decrease_order_with_known_positions.py  create_deposit_order.py  create_increase_order.py  create_swap_order.py  create_withdraw_order.py  debug_swap.py  estimate_swap_output.py  extended_increase_order.py  extended_swap.py  get_gmx_stats.py  get_liquidation_price.py  get_positions.py  identify_farming_opportunities.py  test.py  tmp  utils.py  working_liq_calc.py
gmx_python_sdk/contracts/arbitrum/: chainlinkdatastreamprovider.json  chainlinkpricefeedprovider.json  gmoracleprovider.json  oracle.json  orderhandler.json
gmx_python_sdk/contracts/avalanche/: glvreader.json
gmx_python_sdk/scripts/v2/: approve_token_for_spend.py  gmx_utils.py  signers.py
gmx_python_sdk/scripts/v2/get/: get_available_liquidity.py  get_gm_prices.py  get_oracle_prices.py  test.py
gmx_python_sdk/scripts/v2/order/: create_swap_order.py  order.py
gmx_python_sdk/scripts/v2/utils/: exchange.py  hash_utils.py
